<resources>
    <string name="app_name">PT. Merak Jaya Abadi</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="mja_judul">Merak Jaya Abadi</string>
    <string name="mja_content">Sales Dan Shipping App</string>
    <string name="nama_pt">PT. Merak Jaya Abadi</string>
    <string name="atau">atau</string>
    <string name="daftar">DAFTAR</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="logo_merak_jaya_abadi">Logo Merak Jaya Abadi</string>
    <string name="sudah_punya">Sudah punya akun?</string>
    <string name="reset_password">Untuk setel ulang password, masukkan email terdaftar, klik tombol RESET PASSWORD dan ikuti petunjuk di email Anda.</string>
    <string name="judul_reset_password">Reset Password</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="kembali_ke_halaman_login">Kembali ke Halaman Login</string>
    <string name="title_activity_maps">PT. Merak Jaya Abadi</string>
    <string name="to_maps">to Maps</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="user_name">User Name</string>
    <string name="error_message">Error message</string>
    <string name="isi_data_diri">Isi Data Diri</string>
    <string name="unggah_foto">Unggah Foto</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="email_aktif">Email aktif</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="ulangi_password">ulangi password</string>
    <string name="pilih_depo">Pilih depo</string>
    <string name="sukses_menambahkan">Sukses Menambahkan</string>
    <string name="_0_stores_have_been_added_from_250_limited_stores">0 Stores have been added from 250 limited stores</string>
    <string name="_0_stores_have_been_added_today">0 Stores have been added today</string>
    <string name="sent_report">LAPORAN</string>
    <string name="task">TUGAS</string>
    <string name="store_location">DAFTAR TOKO</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="masuk">MASUK</string>
    <string name="tambah">Tambah</string>
    <string name="cancel">Cancel</string>
    <string name="alamat">Alamat</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="tambah_data_pelangan">Tambah Data Pelangan</string>
    <string name="tambahkan_toko">Tambahkan Toko</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="sudah_diantar">Sudah Diantar</string>
    <string name="toko_abadi_jaya">Toko Abadi Jaya</string>
    <string name="oxygen">Oxygen</string>
    <string name="stock">50 pcs</string>
    <string name="ambil_device_code">Ambil Device Code</string>
    <string name="aktifkan_device">AKTIFKAN</string>
    <string name="device_code">Device Code</string>
    <string name="help">help</string>
    <string name="kode_aktivasi">Kode Aktivasi</string>
    <string name="kode_verivikasi">Kode Verivikasi</string>
    <string name="new_password">New Password</string>
    <string name="cek">Cek Kombinasi</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="perbarui">Perbarui</string>
    <string name="verivikasibutonpass">Verivikasi New Password</string>
    <string name="apabila_email_belum_diterima">Apabila Email belum diterima dalam  waktu kurang dari 2 menit. klik tombol yang terletak di samping isian kode verivikasi.</string>
</resources>
