<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ResetPasswordActivity">
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_mja_main"
        android:contentDescription="@string/logo_merak_jaya_abadi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mja_judul"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mja_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_pt"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progress_reset"
        style="?android:attr/progressBarStyleSmallInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_reset_password"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/reset_password"
        android:textColor="@color/colorHint"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="14sp"/>

    <!-- Email -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >

        <EditText
            android:id="@+id/edtResetEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:textSize="13sp"
            android:background="@drawable/round_corner"
            android:drawableLeft="@drawable/ic_mail"
            android:drawableStart="@drawable/ic_mail"
            android:drawableRight="@drawable/ic_arrow"
            android:drawableEnd="@drawable/ic_arrow"
            android:drawablePadding="15dp"
            tools:ignore="LabelFor,UnusedAttribute"
            android:autofillHints="@string/masukan_email" />

    </android.support.v7.widget.CardView>

    <!-- Button Reset -->
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/button_reset_password"
        android:textSize="15sp"
        android:textColor="#FFF"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@drawable/round_button"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_back_login_from_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kembali_ke_halaman_login"
        android:textStyle="bold"
        android:textColor="@color/colorHint"
        android:layout_marginTop="15dp"
        android:background="#0000"
       />
</LinearLayout>