<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVstoreId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:id="@+id/TVstoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toko_abadi_jaya"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/TVOwnName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toko_abadi_jaya"
                android:textSize="20sp"
                android:textStyle="italic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/TVtimestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/sudah_diantar"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"
                    android:textSize="20sp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/TVaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oxygen"
                />


            <TextView
                android:id="@+id/TVlocation"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>