<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_to_add_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/butontoko"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/tambahkan_toko"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:visibility="invisible"
        tools:ignore="RtlHardcoded,UnusedAttribute"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:id="@+id/Linear_Store"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9999"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UnusedAttribute,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/ic_launcher_round"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/tambah_data_pelangan"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/EdtStoreName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_toko"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill" />
                <EditText
                    android:id="@+id/EdtOwnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nama Pemilik"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/EdtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/alamat"
                    android:inputType="textMultiLine"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/EdtLokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:visibility="gone"
                    tools:ignore="Autofill,LabelFor" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    tools:ignore="RtlHardcoded">

                    <Button
                        android:id="@+id/btn_cancel_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@null"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btn_add_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@null"
                        android:text="@string/tambah"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        tools:ignore="ButtonStyle" />


                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
