<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".VerivikasiPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo_merak_jaya_abadi"
            android:src="@drawable/logo_mja_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mja_judul"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mja_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pt"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/apabila_email_belum_diterima"
            android:textColor="@color/colorHint"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textSize="14sp"/>

        <ProgressBar
            android:id="@+id/progress_login"
            style="?android:attr/progressBarStyleSmallInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <!-- Login -->
        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="7dp"
                    app:cardElevation="1dp">

                    <EditText
                        android:id="@+id/edtVerivicationCode"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:autofillHints="@string/kode_verivikasi"
                        android:background="@drawable/round_corner"
                        android:drawableStart="@drawable/ic_name"
                        android:drawableLeft="@drawable/ic_name"
                        android:drawableEnd="@drawable/ic_arrow"
                        android:drawableRight="@drawable/ic_arrow"
                        android:drawablePadding="15dp"
                        android:hint="@string/kode_verivikasi"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textSize="15sp"
                        tools:ignore="LabelFor,UnusedAttribute" />

                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/btn_forgot_new"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="right"
                    android:drawableTop="@drawable/ic_forgot"
                    android:drawableLeft="@drawable/ic_forgot"
                    android:drawableRight="@drawable/ic_forgot"
                    android:drawableBottom="@drawable/ic_forgot"
                    android:background="@drawable/round_button"
                    android:fontFamily="monospace"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- PAssword Form -->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:outlineAmbientShadowColor="@color/colorAccent"
                    app:cardCornerRadius="9dp"
                    app:cardElevation="1dp"
                    tools:ignore="InefficientWeight,UnusedAttribute">

                    <EditText
                        android:id="@+id/edtNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:autofillHints="@string/new_password"
                        android:background="@drawable/round_corner"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawableEnd="@drawable/ic_arrow"
                        android:drawableRight="@drawable/ic_arrow"
                        android:drawablePadding="15dp"
                        android:hint="@string/new_password"
                        android:inputType="textVisiblePassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textSize="13sp"
                        tools:ignore="LabelFor" />

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- PAssword Form -->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:outlineAmbientShadowColor="@color/colorAccent"
                    app:cardCornerRadius="9dp"
                    app:cardElevation="1dp"
                    tools:ignore="InefficientWeight,UnusedAttribute">

                    <EditText
                        android:id="@+id/edtConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:autofillHints="@string/confirm_password"
                        android:background="@drawable/round_corner"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawableEnd="@drawable/ic_arrow"
                        android:drawableRight="@drawable/ic_arrow"
                        android:drawablePadding="15dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textVisiblePassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textSize="13sp"
                        tools:ignore="LabelFor" />

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <Button
                android:id="@+id/btn_update_pass"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:fontFamily="monospace"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/perbarui"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textSize="16sp"
                                tools:ignore="RtlHardcoded" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>